Infrastructure/kubernetes/namespaces/dotnet-application/razor-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: razor-app-deployment
  namespace: dotnet-application
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: razor-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: razor-app # Must be the same as Deployment name -- spec.selector.matchLabels
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      serviceAccountName: default
      containers:
        - name: razor-app-container
          image: aks101acr.azurecr.io/aks-app1:1.1.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          # env:
          #   - name: ASPNETCORE_HTTP_PORTS
          #     value: "80"
