Infrastructure/kubernetes/namespaces/dotnet-application/razor-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: razor-app-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: razor-app
          servicePort: 30794
